NXP-30730: cleanup / format