@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2010 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2021 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,20 +18,21 @@
  */
 package org.nuxeo.runtime;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.junit.Test;
-import static org.junit.Assert.*;
-
 import org.nuxeo.runtime.model.ContributionFragmentRegistry;
 
 /**
  * @author <a href="mailto:bs@nuxeo.com">Bogdan Stefanescu</a>
  */
+@SuppressWarnings("deprecation")
 public class ContributionFragmentTest {
 
     static class MyContrib {
@@ -103,10 +104,6 @@ public class ContributionFragmentTest {
         }
     }
 
-    public static List<String> newList(String... args) {
-        return Arrays.asList(args);
-    }
-
     @Test
     public void testRegistry() throws Exception {
         MyRegistry reg = new MyRegistry();
@@ -115,37 +112,37 @@ public class ContributionFragmentTest {
         reg.addContribution(c1);
         MyContrib c11 = new MyContrib("c1");
         c11.title = "c11 title";
-        c11.args = new ArrayList<>(Arrays.asList(new String[] { "a", "b" }));
+        c11.args = List.of("a", "b");
         reg.addContribution(c11);
 
         MyContrib c2 = new MyContrib("c2");
         c2.title = "c2 title";
-        c2.args = new ArrayList<>(Arrays.asList(new String[] { "a", "b" }));
+        c2.args = List.of("a", "b");
         reg.addContribution(c2);
         MyContrib c21 = new MyContrib("c2");
-        c21.args = new ArrayList<>(Arrays.asList(new String[] { "c", "d" }));
+        c21.args = List.of("c", "d");
         reg.addContribution(c21);
 
         assertEquals("c1", reg.getRegistry().get("c1").getId());
         assertEquals("c11 title", reg.getRegistry().get("c1").getTitle());
-        assertEquals(newList("a", "b"), reg.getRegistry().get("c1").getArgs());
+        assertEquals(List.of("a", "b"), reg.getRegistry().get("c1").getArgs());
 
         assertEquals("c2", reg.getRegistry().get("c2").getId());
         assertNull(reg.getRegistry().get("c2").getTitle());
-        assertEquals(newList("a", "b", "c", "d"), reg.getRegistry().get("c2").getArgs());
+        assertEquals(List.of("a", "b", "c", "d"), reg.getRegistry().get("c2").getArgs());
 
         reg.removeContribution(c21);
 
         assertEquals("c2", reg.getRegistry().get("c2").getId());
         assertEquals("c2 title", reg.getRegistry().get("c2").getTitle());
-        assertEquals(newList("a", "b"), reg.getRegistry().get("c2").getArgs());
+        assertEquals(List.of("a", "b"), reg.getRegistry().get("c2").getArgs());
 
         reg.removeContribution(c2);
         assertNull(reg.getRegistry().get("c2"));
 
         assertEquals("c1", reg.getRegistry().get("c1").getId());
         assertEquals("c11 title", reg.getRegistry().get("c1").getTitle());
-        assertEquals(newList("a", "b"), reg.getRegistry().get("c1").getArgs());
+        assertEquals(List.of("a", "b"), reg.getRegistry().get("c1").getArgs());
 
         assertEquals(1, reg.getRegistry().size());
     }
